--- a/index.html
+++ b/index.html
@@ -1,10 +1,31 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <link rel="icon" type="image/png" href="/assets/images/favicon.png" />
+    <link rel="apple-touch-icon" href="/assets/images/favicon.png" />
+
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="Estancias" />
+    <meta name="msapplication-TileImage" content="/assets/images/favicon.png" />
+    <meta name="application-name" content="Estancias" />
+    <meta name="robots" content="index, follow" />
+    <meta name="googlebot" content="index, follow" />
+    <meta name="author" content="http://marianoarias.soy" />
+
+    <title>Estancias</title>
+    <meta name="title" content="Estancias" />
+    <meta property="og:url" content="http://estanciasdelpilar.com/" />
+    <meta property="og:image" content="/assets/images/facebook.jpg" />
+    <meta property="og:image:alt" content="Estancias" />
+    <meta property="og:title" content="Estancias" />
+    <meta
+      property="og:description"
+      content="Rodeado de naturaleza.Sensación de libertad. Todos los deportes y servicios."
+    />
+    <meta name="description" content="Rodeado de naturaleza.Sensación de libertad. Todos los deportes y servicios." />
+    <link rel="canonical" href="http://estanciasdelpilar.com/" />
   </head>
   <body>
     <div id="root"></div>
