--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
     <meta name="googlebot" content="index, follow" />
     <meta name="author" content="http://marianoarias.soy" />
 
-    <title>Estancias</title>
-    <meta name="title" content="Estancias" />
+    <title>Estancias del Pilar</title>
+    <meta name="title" content="Estancias del Pilar" />
     <meta property="og:url" content="http://estanciasdelpilar.com/" />
     <meta property="og:image" content="/assets/images/facebook.jpg" />
     <meta property="og:image:alt" content="Estancias" />
-    <meta property="og:title" content="Estancias" />
+    <meta property="og:title" content="Estancias del Pilar" />
     <meta
       property="og:description"
       content="Rodeado de naturaleza.Sensación de libertad. Todos los deportes y servicios."
