--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/png" href="/assets/images/favicon.png" />
-    <link rel="apple-touch-icon" href="/assets/images/favicon.png" />
+    <link rel="icon" type="image/png" href="/images/favicon.png" />
+    <link rel="apple-touch-icon" href="/images/favicon.png" />
 
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="Estancias" />
-    <meta name="msapplication-TileImage" content="/assets/images/favicon.png" />
+    <meta name="msapplication-TileImage" content="/images/favicon.png" />
     <meta name="application-name" content="Estancias" />
     <meta name="robots" content="index, follow" />
     <meta name="googlebot" content="index, follow" />
@@ -17,7 +17,7 @@
     <title>Estancias del Pilar</title>
     <meta name="title" content="Estancias del Pilar" />
     <meta property="og:url" content="http://estanciasdelpilar.com/" />
-    <meta property="og:image" content="/assets/images/facebook.jpg" />
+    <meta property="og:image" content="/images/facebook.jpg" />
     <meta property="og:image:alt" content="Estancias" />
     <meta property="og:title" content="Estancias del Pilar" />
     <meta
